--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,1 +1,23 @@
-// Начните писать стили здесь
+// Global
+
+@import "global/variables";
+@import "global/fonts";
+@import "global/global";
+
+// Blocks
+
+@import "blocks/page";
+@import "blocks/page-header";
+@import "blocks/main-nav";
+@import "blocks/page-main";
+@import "blocks/promo";
+@import "blocks/button";
+@import "blocks/benefits";
+@import "blocks/special";
+@import "blocks/example";
+@import "blocks/page-footer";
+@import "blocks/contacts";
+@import "blocks/address";
+@import "blocks/map";
+@import "blocks/social";
+@import "blocks/copyright";
