стилизовал страницу с формой

--- a/source/less/blocks/benefits.less
+++ b/source/less/blocks/benefits.less
@@ -1,5 +1,10 @@
 .benefits__item {
+  list-style-type: none;
   background-color: @basic_grey;
+}
+.benefits__list {
+  margin-left: 0;
+  padding-left: 0;
 }
 .benefits__title {
   font-family: @oswald-regular;
