--- a/source/less/blocks/special.less
+++ b/source/less/blocks/special.less
@@ -1,3 +1,8 @@
+.special__list {
+  margin-left: 0;
+  padding-left: 0;
+}
+
 .special__item {
   color: @special_dark-grey;
   font-family: @arial;
@@ -6,4 +11,5 @@
   font-weight: 400;
   line-height: 18px;
   text-align: left;
+  list-style-type: none;
 }
