--- a/source/less/global/global.less
+++ b/source/less/global/global.less
@@ -3,15 +3,6 @@ a {
   color: inherit;
 }
 
-ul {
-  margin-left: 0;
-  padding-left: 0;
-}
-
-li {
-  list-style-type: none;
-}
-
 img {
   max-width: 100%;
   height: auto;
@@ -62,6 +53,8 @@ img {
   display: block;
   width: 280px;
   padding: 10px 0;
+  border: none;
+  cursor: pointer;
 }
 
 .section-title {
