--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -5,7 +5,13 @@
   font-size: 20px;
   line-height: 20px;
   text-transform: uppercase;
-
   color: @black;
+}
+.main-nav__list {
+  margin-left: 0;
+  padding-left: 0;
+}
 
+.main-nav__item {
+  list-style-type: none;
 }
