--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -1,3 +1,11 @@
+.social__list {
+  margin-left: 0;
+  padding-left: 0;
+}
+.social__item {
+  list-style-type: none;
+}
+
 .social__link {
   background-repeat: no-repeat;
   width: 23px;
@@ -5,12 +13,12 @@
   display: inline-block;
 }
 .social__link--vkontakte {
-  background-image: url("../../img/icon_vkontakte.svg");
+  background-image: url("../img/icon_vkontakte.svg");
 }
 .social__link--facebook {
-  background-image: url("../../img/icon_facebook.svg");
+  background-image: url("../img/icon_facebook.svg");
 }
 .social__link--instagram {
-  background-image: url("../../img/icon_instagram.svg");
+  background-image: url("../img/icon_instagram.svg");
 }
 
