--- a/source/less/global/fonts.less
+++ b/source/less/global/fonts.less
@@ -1,6 +1,7 @@
 @font-face {
   font-family: "Oswald Medium";
   font-style: normal;
+  font-weight: 500;
   font-display: swap;
   src:
     url("../fonts/oswaldmedium.woff2") format("woff2"),
@@ -10,6 +11,7 @@
 @font-face {
   font-family: "Oswald Regular";
   font-style: normal;
+  font-weight: 400;
   font-display: swap;
   src:
     url("../fonts/oswaldregular.woff2") format("woff2"),
