--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -1,7 +1,7 @@
 // Colors
 
 @basic_green: #68B738;
-@basic_grey: #F2F2F2;
+@basic_grey: #f2f2f2;
 @special_grey-2: #EBEBEB;
 @special_grey: #CDCDCD;
 @special_grey-2: #666666;
@@ -10,7 +10,7 @@
 @status_error: #FF8282;
 @basic_green-2: #5EAA2F;
 @black: #000000;
-@white: #FFFFFF;
+@white: #ffffff;
 @whisper: #EAEAEA;
 @black-2: #111111;
 
