--- a/source/less/style.less
+++ b/source/less/style.less
@@ -22,3 +22,9 @@
 @import "blocks/social";
 @import "blocks/copyright";
 @import "blocks/form";
+@import "blocks/cat-info";
+@import "blocks/product-card";
+@import "blocks/main-catalog";
+@import "blocks/extra-catalog";
+@import "blocks/extra-card";
+@import "blocks/gift";
